--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
             <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     
-            <link rel="stylesheet" href="style.css">
+            <link rel="stylesheet" href="css/style.css">
         </head>
         <body>
             <div class="page-header">
@@ -79,7 +79,7 @@
                 </table>
             </div>
 
-            <script src="main.js"></script>
+            <script src="js/main.js"></script>
             <br><br>
             <button type="submit" class="btn btn-danger" onclick="DeleteMultipleRows()"  id="add" >DELETE</button>
         </body>-
