--- a/index.html
+++ b/index.html
@@ -82,5 +82,5 @@
             <script src="js/main.js"></script>
             <br><br>
             <button type="submit" class="btn btn-danger" onclick="DeleteMultipleRows()"  id="add" >DELETE</button>
-        </body>-
+        </body>
     </html>
